--- a/examples/verrazzano/Jenkinsfile
+++ b/examples/verrazzano/Jenkinsfile
@@ -17,8 +17,8 @@ pipeline {
          // println 'Initiate Terraform provider'//
          // sh 'terraform init' //only need for first run //
          // sh 'terraform refresh -lock=false'//
-         // sh 'cp terraform.tfvars .'"
-         sh 'ls -l'
+         // sh 'cp terraform.tfvars .'//
+         // sh 'ls -l'//
 	                
       }
     }
