--- a/examples/verrazzano/Jenkinsfile
+++ b/examples/verrazzano/Jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
           println 'List all files needed'
           sh 'ls'
           println 'Terraform plan oke'
-          sh 'terraform plan -chdir="./verrazzano" -lock=false -out oke_plan'
+          sh 'terraform plan -chdir=./verrazzano -lock=false -out oke_plan'
       }      
     }
 
