--- a/examples/verrazzano/Jenkinsfile
+++ b/examples/verrazzano/Jenkinsfile
@@ -38,8 +38,8 @@ pipeline {
          //sh 'terraform init' //only need for first run 
          // sh 'terraform refresh -lock=false'//
          //sh 'cp vars.tf .'//
-          println 'List all files needed'
-          sh 'ls -l'
+          //println 'List all files needed'//
+         // sh 'ls -l'//
           println 'Terraform plan oke'
           sh 'terraform plan -lock=false -out oke_plan'
       }      
