--- a/examples/verrazzano/Jenkinsfile
+++ b/examples/verrazzano/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
          // sh 'ls -l'//
           println 'Terraform plan oke'
 	  sh 'cd ./examples/verrazzano'
-          sh 'terraform plan -lock=false -out oke_plan'
+          sh 'terraform plan -lock=false -out ./examples/verrazzano/oke_plan'
       }      
     }
 
