--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -57,9 +57,17 @@ subnets = {
   fss      = { netnum = 18, newbits = 11 }
 }
 
-vcn_cidrs     = ["10.0.0.0/16"]
-vcn_dns_label = "oke"
-vcn_name      = "vcnoke"
+create_vcn                   = true
+vcn_cidrs                    = ["10.0.0.0/16"]
+vcn_dns_label                = "oke"
+vcn_name                     = "vcnoke"
+vcn_display_name             = ""
+vcn_id                       = ""
+ig_route_table_display_name  = ""
+ig_route_table_id            = ""
+nat_route_table_display_name = ""
+nat_route_table_id           = ""
+
 
 # bastion host
 create_bastion_host = true
@@ -249,9 +257,17 @@ freeform_tags = {
     security    = "high"
   }
   oke = {
-    service_lb  = {
+    cluster = {
+      environment = "dev"
+      role        = "cluster"
+    }
+    service_lb = {
       environment = "dev"
       role        = "load balancer"
+    }
+    node_pool = {
+      environment = "dev"
+      role        = "node-pool"
     }
   }
 }
