--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -149,7 +149,7 @@ pods_cidr                    = "10.244.0.0/16"
 services_cidr                = "10.96.0.0/16"
 
 ## oke cluster kms integration
-use_encryption  = false
+use_cluster_encryption  = false
 cluster_kms_key_id      = ""
 create_policies = true
 
