--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -54,6 +54,7 @@ subnets = {
   int_lb   = { netnum = 16, newbits = 11 }
   pub_lb   = { netnum = 17, newbits = 11 }
   workers  = { netnum = 1, newbits = 2 }
+  pods     = { netnum = 2, newbits = 2 }
   fss      = { netnum = 18, newbits = 11 }
 }
 
@@ -137,9 +138,11 @@ admission_controller_options = {
   PodSecurityPolicy = false
 }
 allow_node_port_access       = false
+allow_pod_internet_access    = true
 allow_worker_internet_access = true
 allow_worker_ssh_access      = false
 cluster_name                 = "oke"
+cni_type                     = "flannel"
 control_plane_type           = "private"
 control_plane_allowed_cidrs  = ["0.0.0.0/0"]
 control_plane_nsgs           = []
