feat: added freeform tagging for pvc and nodepools
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -280,6 +280,9 @@ freeform_tags = {
       environment = "dev"
       role        = "cluster"
     }
+    persistent_volume = {
+      environment = "dev"
+    }    
     service_lb = {
       environment = "dev"
       role        = "load balancer"
