Fix: unsupported tags removed and typo fixes
Signed-off-by: Valentina Rossi <valentina.rossi@sighup.io>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -179,7 +179,7 @@ image_signing_keys = []
 check_node_active = "all"
 enable_pv_encryption_in_transit = false
 node_pools = {
-  np1 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" } }
+  np1 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" }, freeform_tags = { app = "frontend", pool = "np1" }, defined_tags = { app = "frontend", pool = "np1" } }
   np2 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np2" } }
   # np3 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" } }
   # np4 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" } }
@@ -291,6 +291,10 @@ freeform_tags = {
       environment = "dev"
       role        = "node-pool"
     }
+    node = {
+      environment = "dev"
+      role        = "instance"
+    }
   }
 }
 
@@ -328,6 +332,10 @@ defined_tags = {
     node_pool = {
       environment = "dev"
       role        = "node-pool"
+    }
+    node = {
+      environment = "dev"
+      role        = "instance"
     }
   }
 }
