--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -179,7 +179,7 @@ image_signing_keys = []
 check_node_active = "all"
 enable_pv_encryption_in_transit = false
 node_pools = {
-  np1 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" } }
+  np1 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" }, nodepool_freeform_tags = { app = "frontend", pool = "np1" }, nodepool_defined_tags = { "Operations.CostCenter" = "42" } }
   np2 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np2" } }
   # np3 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" } }
   # np4 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, placement_ads = [1] }
@@ -290,6 +290,40 @@ freeform_tags = {
     node_pool = {
       environment = "dev"
       role        = "node-pool"
+    }
+    node = {
+      environment = "dev"
+      role        = "worker"
+    }
+  }
+}
+
+# defined_tags
+defined_tags = {
+  # vcn, bastion and operator freeform_tags are required
+  # add more freeform_tags in each as desired
+  vcn = {
+    "cn.environment" = "dev"
+  }
+  oke = {
+    cluster = {
+      "cn.environment" = "dev"
+      "cn.role"        = "cluster"
+    }
+    persistent_volume = {
+      "cn.environment" = "dev"
+    }    
+    service_lb = {
+      "cn.environment" = "dev"
+      "cn.role"        = "load balancer"
+    }
+    node_pool = {
+      "cn.environment" = "dev"
+      "cn.role"        = "node-pool"
+    }
+    node = {
+      "cn.environment" = "dev"
+      "cn.role"        = "worker"
     }
   }
 }
