--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -78,7 +78,7 @@ jobs:
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform fmt
 
     # Generates an execution plan for Terraform
     #- name: Terraform Plan
