Provided bastion IP fallback if creation disabled, omit -i if no key file for output var
Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -101,6 +101,9 @@ bastion_timezone = "Etc/UTC"
 bastion_type     = "public"
 upgrade_bastion  = false
 
+# Use an existing bastion with create_bastion_host = false
+bastion_public_ip = "" 
+
 ## bastion notification
 enable_bastion_notification   = false
 bastion_notification_endpoint = ""
