fix: Ignore lifecycle changes, support Resource Manager variables (#583)
* Remove extraneous icmp_options reporting change each apply

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Ignore node pool changes for automatic tagging and dynamic variables reporting change each apply

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Use specific compartment for AD listing

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Ignore cluster changes for automatic tagging reporting change each apply

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Suppress reported output changes on each apply/destroy

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Ignore dynamic kubeconfig changes reported each apply w/ refresh option

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Support variable naming populated by Resource Manager

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Provided bastion IP fallback if creation disabled, omit -i if no key file for output var

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Use stable random suffix for dynamic group name

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Fall back to provided bastion/operator addresses, user config

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

* Clarify TF resource naming for operator IAM

* Update modules: bastion 3.1.2, operator 3.1.1

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

Signed-off-by: Devon Crouse <devon.crouse@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -90,6 +90,7 @@ create_bastion_host = true
 bastion_access      = ["anywhere"]
 bastion_image_id    = "Autonomous"
 bastion_os_version  = "7.9"
+bastion_user        = "opc"
 bastion_shape = {
   shape            = "VM.Standard.E4.Flex",
   ocpus            = 1,
@@ -100,6 +101,10 @@ bastion_state    = "RUNNING"
 bastion_timezone = "Etc/UTC"
 bastion_type     = "public"
 upgrade_bastion  = false
+
+# Use an existing bastion. If create_bastion_host = false and set
+# to non-empty string, will be used for SSH access into the VCN.
+bastion_public_ip = ""
 
 ## bastion notification
 enable_bastion_notification   = false
@@ -119,6 +124,7 @@ operator_image_id                  = "Oracle"
 enable_operator_instance_principal = true
 operator_nsg_ids                   = []
 operator_os_version                = "8"
+operator_user                      = "opc"
 operator_shape = {
   shape            = "VM.Standard.E4.Flex",
   ocpus            = 1,
@@ -128,6 +134,10 @@ operator_shape = {
 operator_state    = "RUNNING"
 operator_timezone = "Etc/UTC"
 upgrade_operator  = false
+
+# Use an existing operator. If create_operator = false and set
+# to non-empty string, will be used for k8s access within the VCN.
+operator_private_ip = ""
 
 # Operator in-transit encryption for the data volume's paravirtualized attachment.
 enable_operator_pv_encryption_in_transit = false
