--- a/provider.tf.example
+++ b/provider.tf.example
@@ -1,16 +1,18 @@
 provider "oci" {
-  fingerprint      = var.api_fingerprint
-  private_key      = var.api_private_key
-  region           = var.region
-  tenancy_ocid     = local.tenancy_id
-  user_ocid        = local.user_id
+  fingerprint         = var.api_fingerprint
+  private_key         = var.api_private_key
+  region              = var.region
+  tenancy_ocid        = local.tenancy_id
+  user_ocid           = local.user_id
+  config_file_profile = var.config_file_profile
 }
 
 provider "oci" {
-  fingerprint      = var.api_fingerprint
-  private_key      = var.api_private_key
-  region           = var.home_region
-  tenancy_ocid     = local.tenancy_id
-  user_ocid        = local.user_id
-  alias = "home"
+  fingerprint         = var.api_fingerprint
+  private_key         = var.api_private_key
+  region              = local.home_region
+  tenancy_ocid        = local.tenancy_id
+  user_ocid           = local.user_id
+  config_file_profile = var.config_file_profile
+  alias               = "home"
 }
