--- a/vars-workerpool.auto.tfvars.example
+++ b/vars-workerpool.auto.tfvars.example
@@ -1,45 +1,41 @@
-# Copyright 2022 Oracle Corporation and/or affiliates.
+# Copyright (c) 2022, 2023 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl
 
-# Default parameters
-label_prefix                  = "dev"
+# Default parameters when undefined for a group
+worker_compartment_id        = "" # Defaults to compartment_id when unspecified
 worker_pool_size             = 0
 worker_pool_mode             = "node-pool"
 worker_pool_shape            = "VM.Standard.E4.Flex"
 worker_pool_ocpus            = 2  # Ignored for non-Flex shapes
 worker_pool_memory           = 16 # Ignored for non-Flex shapes
 worker_pool_boot_volume_size = 100
+worker_pool_enabled   = false # Defaults to true; must otherwise enable groups explicitly
+worker_pool_subnet_id = ""    # Defaults to Terraform-managed when empty
 
-# Default parameters when undefined for a group
-worker_pool_enabled           = false # Defaults to true; must otherwise enable groups explicitly
-worker_compartment_id          = "" # Defaults to compartment_id when empty
-worker_pool_subnet_id = "" # Defaults to Terraform-managed when empty
-
-# Some default worker_pools vars will fall back to node_pools values when != "none"
-node_pool_image_id   = "ocid1.image..." # Ignored when image type != "custom"
-node_pool_image_type = "oke" # Must be "custom" when providing an image OCID
-node_pools  = {} # Functions as before; only worker_pools are defined in this example
 worker_nsgs = [] # Defaults to VCN workers NSG when empty/missing
 
-# Defaults for worker_pools, when different from node_pools
-worker_pool_image_id   = "ocid1.image..." # Ignored when image type != "custom"
-worker_pool_image_type = "oke"
+# Ignored when image type != "custom"
+# worker_pool_image_id = "ocid1.image..." 
+
+# Ignored when image type != "custom"; defaults to node_pool_image_id when unspecified
+worker_pool_image_type = "oke" # Defaults to node_pool_image_type when unspecified
 
 # Definitions for worker pools, with any fields set overriding defaults above
 #   The "worker_pool_" prefix is omitted for parameters at the group level
 #   All value fields may be omitted to accept defaults for a sparse definition
 worker_pools = {
-  np_vm-minimal = {},
-  np_vm-ol7 = {
-    enabled = false, description = "Managed Node Pool with OKE Oracle Linux 7 image"
-    size = 1, os = "Oracle Linux", os_version  = "7"
-  },
-  np_vm-ol8 = {
-    enabled = false, description = "Managed Node Pool with OKE Oracle Linux 8 image"
-    size = 1, os = "Oracle Linux", os_version  = "8"
-  },
-  np_vm-custom = {
-    enabled = false, description = "Managed Node Pool with custom image OCID"
-    image_type = "custom", image_id = "ocid1.image..."
-  },
+  # np_vm-minimal = {},
+  # np_vm-ol7 = {
+  #   enabled = false, description = "Managed Node Pool with OKE Oracle Linux 7 image"
+  #   size = 1, os = "Oracle Linux", os_version  = "7",
+  # },
+  # np_vm-ol8 = {
+  #   enabled = false, description = "Managed Node Pool with OKE Oracle Linux 8 image"
+  #   size = 1, os = "Oracle Linux", os_version  = "8",
+  #   node_labels = { "key" : "value" },
+  # },
+  # np_vm-custom = {
+  #   enabled = false, description = "Managed Node Pool with custom image OCID"
+  #   image_type = "custom", image_id = "ocid1.image...",
+  # },
 }
