--- a/vars-workerpool.auto.tfvars.example
+++ b/vars-workerpool.auto.tfvars.example
@@ -4,7 +4,7 @@
 # Default parameters when undefined for a group
 worker_compartment_id        = "" # Defaults to compartment_id when unspecified
 worker_pool_size             = 0
-worker_pool_mode             = "node-pool"
+worker_pool_mode             = "node-pool" # Must be "node-pool"
 worker_pool_shape            = "VM.Standard.E4.Flex"
 worker_pool_ocpus            = 2  # Ignored for non-Flex shapes
 worker_pool_memory           = 16 # Ignored for non-Flex shapes
