--- a/vars-workerpool.auto.tfvars.example
+++ b/vars-workerpool.auto.tfvars.example
@@ -4,7 +4,7 @@
 # Default parameters when undefined for a group
 worker_compartment_id        = "" # Defaults to compartment_id when unspecified
 worker_pool_size             = 0
-worker_pool_mode             = "node-pool"
+worker_pool_mode             = "node-pool" # Must be "node-pool"
 worker_pool_shape            = "VM.Standard.E4.Flex"
 worker_pool_ocpus            = 2  # Ignored for non-Flex shapes
 worker_pool_memory           = 16 # Ignored for non-Flex shapes
@@ -13,12 +13,6 @@ worker_pool_enabled   = false # Defaults to true; must otherwise enable groups e
 worker_pool_subnet_id = ""    # Defaults to Terraform-managed when empty
 
 worker_nsgs = [] # Defaults to VCN workers NSG when empty/missing
-
-# Ignored when image type != "custom"
-# worker_pool_image_id = "ocid1.image..." 
-
-# Ignored when image type != "custom"; defaults to node_pool_image_id when unspecified
-worker_pool_image_type = "oke" # Defaults to node_pool_image_type when unspecified
 
 # Definitions for worker pools, with any fields set overriding defaults above
 #   The "worker_pool_" prefix is omitted for parameters at the group level
