--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -198,7 +198,7 @@ node_pools = {
   #  memory           = 32,
   #  node_pool_size   = 1,
   #  boot_volume_size = 150,
-  #  eviction_grace_duration = 2,
+  #  eviction_grace_duration = 0,  //Grade duration in minutes. Service default is 60.
   #  force_node_delete       = true  
   #}
   # # node pool with initial node labels
