--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -1,43 +1,42 @@
 name: Publish Terraform OCI OKE Module Book
 on:
-  # Rebuild docs when a release is published
-  release:
-    types: [published]
-  # Enable manual trigger
-  workflow_dispatch:
-
+  on:
+    push:
+      tags:
+        - 'v5.*'
+      branches:
+        - 'main'
+        - '5.x'
+    release:
+      types: [published]
+    workflow_dispatch:
 jobs:
   build-and-publish-book:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
-        fetch-depth: 0
+        ref: $GITHUB_REF_NAME
     - name: Install mdbook
       run: |
-        mkdir mdbook
-        curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.21/mdbook-v0.4.21-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=./mdbook
+        # Download mdbook
+        mkdir ./mdbook
+        curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.21/mdbook-v0.4.21-x86_64-unknown-linux-gnu.tar.gz \
+          | tar -xz --directory=./mdbook
         echo `pwd`/mdbook >> $GITHUB_PATH
-        cargo install mdbook-admonish
-    - name: Deploy Book to GitHub Pages
-      run: |
-        # Build the HTML content
-        mdbook build -d book/ docs/
 
-        # Create and switch to the gh-pages work tree
-        git worktree add gh-pages gh-pages
-        cd $GITHUB_WORKSPACE/gh-pages
-
+        # Create and switch to separate worktree
+        git worktree add -b $GITHUB_REF_NAME docs || exit 1 && pushd docs
         git config user.name "GitHub Actions"
         git config user.email "oci-dax-tools_ww@oracle.com"
 
-        # Delete the ref to avoid keeping history.
-        git update-ref -d refs/heads/gh-pages
-        rm -rf *
+        # Build the tfdocs and HTML content
+        make mdbuild || exit 1   # Generate docs
+        touch .nojekyll          # Don't run published files through Jekyll
+        git add .                # Stage new content
+        git commit -m "Deploy $GITHUB_SHA to $GITHUB_REF_NAME-docs"
+        git pull --rebase \      # Rebase on latest and push; suffix on conflict
+          && git push $GITHUB_REF_NAME:$GITHUB_REF_NAME-docs \
+              || git push --force-with-lease "$GITHUB_REF_NAME:$GITHUB_REF_NAME-docfail"
+        pop; git worktree remove --force $GITHUB_REF_NAME # Exit and remove workspace
 
-        mv $GITHUB_WORKSPACE/docs/book/* $GITHUB_WORKSPACE/gh-pages
-        touch $GITHUB_WORKSPACE/gh-pages/.nojekyll
-
-        git add .
-        git commit -m "Deploy $GITHUB_SHA to gh-pages"
-        git push --force-with-lease
